k8s/node-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-todo-app
  #namespace: ameen2607-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-todo-app
  template:
    metadata:
      labels:
        app: node-todo-app
    spec:
      containers:
      - name: node-todo-app
        image: 593793064016.dkr.ecr.us-east-1.amazonaws.com/myecr-ameen1@sha256:4240419aa95be71ad66633e17296e6002f938de29ee973031c8162c62c85e857
        #image: __IMAGE__
        ports:
        - containerPort: 3000
