k8s/node-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: ameen2607-dev
spec:
  selector:
    app: node-todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
